// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FirstRow.vue snapshots: should match if grid status is not custom 1`] = `
<section
  class="hb-row hbr-first"
>
  <header
    class="hbr-header"
  >
    <span
      class="hbr-title"
    >
      First Row
    </span>
     
    <!---->
  </header>
   
  <div
    class="hbr-container"
  >
    <grid-row-cell-stub
      cellpos="left"
      row="firstRow"
    />
     
    <cell-footer-stub
      pos="left"
    >
      
        align: left
    
    </cell-footer-stub>
     
    <grid-row-cell-stub
      cellpos="center"
      row="firstRow"
    />
     
    <cell-footer-stub
      pos="center"
    >
      
        align: center
    
    </cell-footer-stub>
     
    <grid-row-cell-stub
      cellpos="right"
      row="firstRow"
    />
     
    <cell-footer-stub
      pos="right"
    >
      
        align: right
    
    </cell-footer-stub>
  </div>
</section>
`;

exports[`FirstRow.vue snapshots: should match if the layout position is bottom 1`] = `
<section
  class="hb-row hbr-first"
>
  <header
    class="hbr-header"
  >
    <span
      class="hbr-title"
    >
      First Row
    </span>
     
    <a
      class="icon-edit"
      href="#"
    >
      <font-icon-stub
        icon="pencil"
      />
    </a>
  </header>
   
  <div
    class="hbr-container"
  >
    <grid-row-cell-stub
      cellpos="left"
      row="firstRow"
    />
     
    <cell-footer-stub
      pos="left"
    >
      
        align: left
    
    </cell-footer-stub>
     
    <grid-row-cell-stub
      cellpos="center"
      row="firstRow"
    />
     
    <cell-footer-stub
      pos="center"
    >
      
        align: center
    
    </cell-footer-stub>
     
    <grid-row-cell-stub
      cellpos="right"
      row="firstRow"
    />
     
    <cell-footer-stub
      pos="right"
    >
      
        align: right
    
    </cell-footer-stub>
  </div>
</section>
`;

exports[`FirstRow.vue snapshots: should match if the layout position is left 1`] = `
<section
  class="hb-row hbr-first"
>
  <header
    class="hbr-header"
  >
    <span
      class="hbr-title"
    >
      First Row
    </span>
     
    <a
      class="icon-edit"
      href="#"
    >
      <font-icon-stub
        icon="pencil"
      />
    </a>
  </header>
   
  <div
    class="hbr-container"
  >
    <grid-row-cell-stub
      cellpos="left"
      row="firstRow"
    />
     
    <cell-footer-stub
      pos="left"
    >
      
        align: middle
    
    </cell-footer-stub>
     
    <grid-row-cell-stub
      cellpos="center"
      row="firstRow"
    />
      
    <grid-row-cell-stub
      cellpos="right"
      row="firstRow"
    />
     
  </div>
</section>
`;

exports[`FirstRow.vue snapshots: should match if the layout position is right 1`] = `
<section
  class="hb-row hbr-first"
>
  <header
    class="hbr-header"
  >
    <span
      class="hbr-title"
    >
      First Row
    </span>
     
    <a
      class="icon-edit"
      href="#"
    >
      <font-icon-stub
        icon="pencil"
      />
    </a>
  </header>
   
  <div
    class="hbr-container"
  >
    <grid-row-cell-stub
      cellpos="left"
      row="firstRow"
    />
     
    <cell-footer-stub
      pos="left"
    >
      
        align: middle
    
    </cell-footer-stub>
     
    <grid-row-cell-stub
      cellpos="center"
      row="firstRow"
    />
      
    <grid-row-cell-stub
      cellpos="right"
      row="firstRow"
    />
     
  </div>
</section>
`;

exports[`FirstRow.vue snapshots: should match if the layout position is top 1`] = `
<section
  class="hb-row hbr-first"
>
  <header
    class="hbr-header"
  >
    <span
      class="hbr-title"
    >
      First Row
    </span>
     
    <a
      class="icon-edit"
      href="#"
    >
      <font-icon-stub
        icon="pencil"
      />
    </a>
  </header>
   
  <div
    class="hbr-container"
  >
    <grid-row-cell-stub
      cellpos="left"
      row="firstRow"
    />
     
    <cell-footer-stub
      pos="left"
    >
      
        align: left
    
    </cell-footer-stub>
     
    <grid-row-cell-stub
      cellpos="center"
      row="firstRow"
    />
     
    <cell-footer-stub
      pos="center"
    >
      
        align: center
    
    </cell-footer-stub>
     
    <grid-row-cell-stub
      cellpos="right"
      row="firstRow"
    />
     
    <cell-footer-stub
      pos="right"
    >
      
        align: right
    
    </cell-footer-stub>
  </div>
</section>
`;
